# kfilter6

./: .gitignore  CMakeLists.txt  PORTING.md  README.md  circuitout.cpp  circuitout.h  colordialog.cpp  colordialog.h  driver.cpp  driver.h  driverinput.cpp  driverinput.h  driverparametersdialog.cpp  driverparametersdialog.h  go_for_it.sh  kfilter.cpp  kfilter.h  kfilterdoc.cpp  kfilterdoc.h  kfilterdriverio.cpp  kfilterdriverio.h  kfilterprojectio.cpp  kfilterprojectio.h  kfilterqt6app.cpp  kfilterqt6app.h  kfilterview.cpp  kfilterview.h  main.cpp  mainqt6.cpp  networkdialog.cpp  networkdialog.h  networkparametersdialog.cpp  networkparametersdialog.h  networksectioneditdialog.cpp  networksectioneditdialog.h  networkvalueutils.cpp  networkvalueutils.h  plotcolorsdialog.cpp  plotcolorsdialog.h  volumedialog.cpp  (+1 more)
resources/: kfilter6.qrc
tools/: defaults_smoketest.cpp  driver_smoketest.cpp  kfilterdoc_smoketest.cpp  projectio_smoketest.cpp
